app/styles/front.css
.front-page__side-nav {
	display: none;
	position: fixed;
	left: 15px;
	top: 60px;
	flex-direction: column;
	gap: var(--s-3);
	overflow-y: auto;
	height: 100vh;
	padding-block-end: var(--s-24);
	padding-inline-end: var(--s-4);
}

.front-page__side-nav picture {
	background-color: var(--bg-lightest);
	border-radius: var(--rounded);
	padding: 0.225rem;
}

.front-page__side-nav-item {
	display: flex;
	color: var(--text);
	font-size: var(--fonts-xs);
	font-weight: var(--bold);
	gap: var(--s-1-5);
	align-items: center;
}

.front-page__side-nav__log-out {
	display: flex;
	color: var(--text);
	font-size: var(--fonts-xs);
	font-weight: var(--bold);
	gap: var(--s-1-5);
	align-items: center;
	color: var(--text-lighter) !important;
}

.front-page__side-nav__log-out svg {
	background-color: var(--bg-lightest);
	border-radius: var(--rounded);
	padding: var(--s-1);
	min-width: 28px;
	margin-inline-end: 0 !important;
	padding: var(--s-1-5);
}

.front-page__side-nav__log-out path {
	margin-inline-end: -1px;
}

.front-page__side-nav-item:hover picture {
	background-color: var(--theme-transparent);
}

/** Reference to .layout__hamburger-fab **/
@media screen and (min-width: 1130px) {
	.front-page__side-nav {
		display: flex;
	}
}

.front-page__container {
	--card-width: 225px;
	--card-height: 90px;
	display: flex;
	flex-direction: column;
	gap: var(--s-8);
}

.front__change-log__img {
	max-height: 300px;
	border-radius: var(--rounded-sm);
}

.front__change-log__icon-button {
	display: flex;
	flex-direction: row;
	gap: var(--s-1-5);
	justify-content: center;
	align-items: center;
	font-weight: var(--bold);
	font-size: var(--fonts-xs);
	border-radius: 100%;
	color: var(--text-lighter);
}

.front__change-log__icon-button:hover {
	color: var(--theme);
}

.front__external-link-icon {
	width: 18px;
	stroke-width: 2px;
}

@property --l {
	syntax: "<percentage>";
	inherits: false;
	initial-value: 50%;
}

.front__season-banner {
	/*  needed for firefox to have a valid output */
	--l: 50%;

	background: linear-gradient(
		to right,
		var(--bg-lightest),
		var(--l),
		var(--bg-darker)
	);
	border-radius: var(--rounded);
	padding: var(--s-2) var(--s-3);
	line-height: 1.35;
	position: relative;
	color: var(--text);
	border: 2.5px solid var(--bg-lightest-solid);
	transition: --l 0.2s ease-out;
	margin-block-start: var(--s-4);
}

.front__season-banner:hover {
	--l: 75%;
}

.front__season-banner__header {
	font-size: var(--fonts-xl);
	font-weight: var(--bold);
}

.front__season-banner__dates {
	font-size: var(--fonts-xs);
	font-weight: var(--semi-bold);
}

.front__season-banner__img {
	position: absolute;
	width: 110px;
	right: 5px;
	top: -32.5px;
}

.front__season-banner__link {
	background-color: var(--bg-lightest);
	border-radius: var(--rounded);
	width: max-content;
	padding: var(--s-0-5) var(--s-1-5);
	font-size: var(--fonts-xs);
	color: var(--text);
	display: flex;
	gap: var(--s-2);
	align-items: center;
}

.front__season-banner__link svg {
	width: 24px;
	transition: all 0.2s ease-out;
}

.front__season-banner__link:hover svg {
	translate: 2px;
}

.front__tournament-cards {
	display: flex;
	justify-content: space-between;
	gap: var(--s-2);
}

.front__tournament-cards__spacer {
	display: flex;
	gap: var(--s-2);
	height: 100%;
}

.front__tournament-cards__view-all-card {
	background-color: var(--bg-lighter);
	height: var(--card-height);
	border-radius: var(--rounded);
	display: grid;
	place-items: center;
	padding: var(--s-2);
	font-size: var(--fonts-xxs);
	font-weight: var(--bold);
	text-align: center;
	color: var(--text);
	transition: 0.2s ease-out;
	min-width: 90px;
	max-width: 90px;
	border: 2.5px solid var(--bg-lightest-solid);
}

.front__tournament-cards__view-all-card:hover {
	background-color: var(--bg-lightest);
}

.front__result-highlights {
	display: flex;
	gap: var(--s-2);
}

.front__result-highlights__title {
	font-size: var(--fonts-xs);
}

.front__result-highlights__title__tournaments {
	align-self: flex-start;
	margin-inline-start: 65px;
}

.front__leaderboard {
	min-width: var(--card-width);
	max-width: var(--card-width);
	background-color: var(--bg-lightest);
	border-radius: var(--rounded);
	display: flex;
	flex-direction: column;
	gap: var(--s-2);
	padding: var(--s-2);
}

.front__leaderboard__name {
	font-size: var(--fonts-sm);
	font-weight: var(--bold);
	white-space: nowrap;
	max-width: 140px;
	text-overflow: ellipsis;
	overflow: hidden;
}

.front__leaderboard__view-all {
	font-size: var(--fonts-xxs);
	color: var(--text);
	background-color: var(--bg-lightest);
	border-radius: var(--rounded);
	width: max-content;
	padding-inline: var(--s-2);
	display: flex;
	gap: var(--s-1);
	padding: var(--s-0-5) var(--s-1-5);
}

.front__luti-banner {
	background-color: #4874a0;
	color: #fff;
	border-radius: var(--rounded);
	padding: var(--s-2);
	justify-content: center;
	display: flex;
	gap: var(--s-2);
	flex-wrap: wrap;
}

